# recs

./: CHANGELOG.md  LICENSE  README.md  cabal.project  floskell.json  recs.cabal
recs/: CHANGELOG.md  README.md  recs.cabal
recs-examples/: CHANGELOG.md  recs-examples.cabal  recs-examples.prof.html
recs-examples/app/: Main.hs
recs/src/: Recs.hs
recs/src/Recs/: Arch.hs  Archetype.hs  Commands.hs  Core.hs  EntityInfo.hs  Lib.hs  Query.hs  Storage.hs  System.hs  TypeInfo.hs  Types.hs  Utils.hs  World.hs
src/: Access.hs  Core.hs  Graph.hs  MyLib.hs  Query.hs  Recs.hs  Stores.hs  Target.hs  TypeLevel.hs  Types.hs
src/Recs/: Core.hs  Graph.hs  Lib.hs  Stores.hs  Target.hs  TypeLevel.hs
