cabal-version:      2.4
name:               recs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Winston Hartnett
maintainer:         winstonhartnett@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Recs

    -- Modules included in this library but not exported.
    other-modules:
      Recs.Target
      Recs.Core
      Recs.Stores
      Recs.Graph
      Recs.TypeLevel

    -- LANGUAGE extensions used by modules in this package.
    -- Uses GHC2021 list
    default-extensions:
      EmptyCase
      PostfixOperators
      TupleSections
      ImportQualifiedPost
      NamedFieldPuns
      BangPatterns
      BinaryLiterals
      HexFloatLiterals
      NumericUnderscores
      GADTSyntax
      RankNTypes
      TypeApplications
      PolyKinds
      StandaloneKindSignatures
      ExistentialQuantification
      TypeOperators
      ConstraintKinds
      ExplicitForAll
      KindSignatures
      NamedWildCards
      ScopedTypeVariables
      FlexibleContexts
      FlexibleInstances
      MultiParamTypeClasses
      ConstrainedClassMethods
      InstanceSigs
      TypeSynonymInstances
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveTraversable
      StandaloneDeriving
      EmptyDataDeriving
      DeriveLift
      GeneralisedNewtypeDeriving
      DeriveGeneric
      TemplateHaskell
      TypeFamilies
      OverloadedLabels
      OverloadedLists
    build-depends:
        base >= 4.15 && < 5
      , vector
      , exceptions
      , containers
      , lens
      , generic-lens
      , vector-th-unbox
      , unordered-containers
      , mtl
      , witch
      , data-vector-growable
      , primitive
      , data-default
    hs-source-dirs:   src
    default-language: Haskell2010
