cabal-version:      2.4
name:               recs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Winston Hartnett
maintainer:         winstonhartnett@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Recs.Lib

  -- Modules included in this library but not exported.
  other-modules:
    Recs.TypeInfo
    Recs.Utils

  default-extensions:
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
      base                  >=4.15 && <5
    , containers
    , data-default
    , data-vector-growable
    , exceptions
    -- , foldl
    -- , co-log
    , generic-lens
    , lens
    , mtl
    , primitive
    , unordered-containers
    , vector
    , vector-th-unbox
    , witch
    , text
    , hashable
    , transformers
    -- , arrayfire
    , pvar
    , vector-algorithms
    , gstorable
  hs-source-dirs:   src
  ghc-options:      -freverse-errors -fexpose-all-unfoldings -fspecialise-aggressively -fsimpl-tick-factor=200
  default-language: Haskell2010
